--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch App</title>
-    <link rel="stylesheet" href="./main.css"
+    <title>Chords APP</title>
+    <h1>Chords (and their notes)</h1>
+    <link rel="stylesheet" href="./main.css" />
+    <script defer src="/main.js" ></script>
 </head>
 <body>
-    
+    <div id="root"></div>
 
-    <script src="./main.js"></script>
+    <!-- <script defer src="./main.js"></script> -->
 </body>
 </html>
